Word-wrap bug fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+div {
+    white-space: break-spaces;
+    word-wrap: anywhere;
+}
